--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .container {
-  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+.box {
+  padding: 300px;
+  background-color: yellow;
+  border-radius: 40px;
 }
